[package]
name = "wols"
version = "0.1.0"
authors = ["Matt Cook <hello@mattcook.dev>"] 
edition = "2021"
description = "A minimal orchestrator for Docker containers"
readme = "README.md"
repository = "https://github.com/sciencefidelity/wols"
licence = "MIT or Apache-2.0"
exclude = ["/scripts"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = 1 }
nursery = { level = "deny", priority = 2 }
unwrap_used = "deny"

[dependencies]
uuid = { version = "1.8.0", features = ["v4"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
